Version 1.5.1

   - Added the ability to delete parameters from labs, to reset
     ready for the next experiment.
   - Tests on updating parameters from setrUp(), with notes
   - Refactored experimental designs out of the lab classes

Version 1.4.2 2021-07-16

   - Fixed issue with typing backwards compatibility
   - Fixed leaving spare cores in ParallalLab, and capped requests
     at the maximum number of cores available

Version 1.4.1 2021-06-11

   - Added results sets as keys in LabNotenook
   - Added add-or-select method to LabNotebook
   - Described Jupyter design pattern to avoid repeated computation of result sets
   - Added better badges to README.rst
   - Changed to Github workflows for CI
   - Added basic command-line tool for manipulating notebooks
   - Added exception propagation to Exeperiment.run()

Version 1.3.2 2021-02-19

   - Fixed adding lists as results in HDF5 notebooks

Version 1.3.1 2021-02-11

   - Added notebook-level locking
   - Added loading notebooks directly from URLs
   - Changed Experiment to handle lists of results dicts cleanly

Version 1.2.1 2020-12-09

   - Back-ported to work with Python 3.6 and later, and therefore
     with PyPy3

Version 1.1.2 2020-12-02

   - Fixed issue with TypeMapping initialisation
   - Addad ParallelLab for simpler multicore operation
   - Updated tutorials to reflect new opportunities

Version 1.1.1 2020-11-27

   - Fixed ClusterLab.updateResults() not to bail out completely in response
     to a low-level crashed job (which can happen because of engine failure)
   - Slightly more aggressive closing of connection to cluster, since connections
     held open for a long time seem a lot more prone to failure
   - Slight change to the semantics of lambda-expressions in Python3.8 broke
     ClusterLab
   - Dropped support for dill, replaced with automatic use of cloudpickle
   - Fixed issue with handling RepeatedExperiments
   - Reverted to LabNotebook.addResult() for all additions (splitting between