@@ -4,49 +4,74 @@
 
 ** Release planning
 
-*** Release 1.4.1
+*** Release 1.5.2
 
 **** Coding
 
 ***** DONE Command-line interface to lab notebooks
 
-  Allow notebooks to be manipulated from the command line. Specifically
-  this is to copy and delete result sets from notebooks to tidy them up
-  for release.
+      Allow notebooks to be manipulated from the command line. Specifically
+      this is to copy and delete result sets from notebooks to tidy them up
+      for release.
 
-  Also need to be able to :
+      Also need to be able to :
 
-  - Manipulate attributes of result sets
-  - Add [[*Notes for result sets][notes for result sets]] for later annotation
+      - Manipulate attributes of result sets
+      - Add [[*Notes for result sets][notes for result sets]] for later annotation
 
 ***** DONE Select or create
 
-  Add a select-or-create method to LabNotebook that can be used as a
-  guard for either loading or executing a block of code, to let
-  experiments only run when needed.
+      Add a select-or-create method to LabNotebook that can be used as a
+      guard for either loading or executing a block of code, to let
+      experiments only run when needed.
 
 ***** TODO Notes for result sets
 
-  Add notes alongside results, as well as the description field.
+      Add notes alongside results, as well as the description field.
 
 ***** TODO Tidier handling of HDF5 (and other) files
 
-  Not creating files without good reason; handling missing file by
-  failing rather than creating.
+      Not creating files without good reason; handling missing file by
+      failing rather than creating.
+
+***** TODO Allow functions in lab parameters
+
+      As well as constants and lists, allow a function that gets
+      called for a value.
+
+***** DONE Alternative experimental designs
+
+      Cross-product of parameter space (as now); adding explicit
+      combinations of parameters; maybe others?
+
+***** TODO Rename SingletonDesign to PointwiseDesign
+
 
 **** Bugs
 
 ***** TODO Empty array typing
 
-  In HDF5, adding an empty array first into a field means that the
-  result set doesn't get typed properly, as there's no element type
-  known.
+      In HDF5, adding an empty array first into a field means that the
+      result set doesn't get typed properly, as there's no element type
+      known.
 
 **** Documentation
 
 ***** DONE Jupyter conditional use case
 
       Document using LabNotebook.already() for load-or-execute cells.
+
+***** DONE ParallelLab uses sub-processes
+
+      Because each experiment in a ParallelLab runs in a sub-process,
+      it runs in a different address space to the parent and sop can't
+      affect the variables in the main process -- for example to write
+      into a shared or class variable. The solution is to always pass
+      results out in results dicts, which then get copied about
+      correctly.
+
+***** TODO JOSS paper
+      DEADLINE: <2021-09-10 Fri>
 
 
 ** Sub-projects
