@@ -1,8 +1,10 @@
 Version 1.5.1
 
    - Added the ability to delete parameters from labs, to reset
-     ready for the next experiment.
-   - Tests on updating parameters from setrUp(), with notes
+     ready for the next experiment
+   - Added parameter deletion to tutorial
+   - Tests on updating parameters from setrUp()
+   - Added cookcook recipe on adding parameters
    - Refactored experimental designs out of the lab classes
 
 Version 1.4.2 2021-07-16
